# Sermon-Assistant-AgenticWorkflow

./: .gitignore  AGENTICWORKFLOW-ARCHITECTURE-AND-PHILOSOPHY.md  AGENTICWORKFLOW-USER-MANUAL.md  AGENTS.md  CLAUDE.md  DECISION-LOG.md  GEMINI.md  README.md  SERMON-ASSISTANT-ARCHITECTURE-AND-PHILOSOPHY.md  SERMON-ASSISTANT-USER-MANUAL.md  pyproject.toml
.claude/agents/: historical-context-analyst.md  literary-analyst.md  message-synthesizer.md  outline-architect.md  passage-finder.md  research-synthesizer.md  series-analyzer.md  sermon-reviewer.md  sermon-writer.md  style-analyzer.md  theological-analyst.md  translator.md  unified-srcs-evaluator.md
.claude/commands/: sermon-resume.md  sermon-start.md  sermon-status.md
.claude/hooks/scripts/: _sermon_lib.py  _test_sermon_lib.py  validate_grounded_claim.py
.claude/skills/sermon-orchestrator/: SKILL.md
tests/: conftest.py  test_layer1_unit.py  test_layer2_e2e_hooks.py  test_layer3_integration.py  test_layer4_structural.py
