[project]
name = "agenticworkflow"
version = "1.0.0"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for individual functions",
    "e2e: End-to-end subprocess tests for hook scripts",
    "integration: Multi-script workflow integration tests",
    "structural: Structural integrity and cross-reference validation",
    "slow: Tests that take > 5 seconds",
]
addopts = "-v --tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]
